--- a/README
+++ b/README
@@ -10,3 +10,11 @@ Features:
 
 TODO:
 -Accept parameters (such as "Device Name")
+-Fix elem.strip on line 49 (read comment)
+
+Changelog:
+v0.1.1
++If device_name is not found on xinput list, exit(1) and print message
+
+v0.1.0
+Initial Release
